2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: The critcl implementation of md5crypt generates
	  different error messages when called with the wrong number of
	  arguments. Updated the tests to take this into account.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: Hooked into the new common test support code.

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* md5crypt.bench: New file. Basic benchmarks for MD5 password
	  hashes.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5cryptc.tcl: Fix for building with msvc.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: Testsuite fixed. Had to account that error
	  messages can dependent on the version of the Tcl core.
